# APILite

./: .gitignore  README.md  README.zh.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: user-guide-zh.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  i18n.ts  index.css  themes.ts  types.ts
frontend/src/components/: BodyEditor.tsx  BodyFormTable.tsx  CodeEditor.tsx  CollectionSidebar.tsx  CurlPanel.tsx  EnvVarField.tsx  EnvVarSuggestList.tsx  EnvironmentModal.tsx  FolderSidebar.tsx  HeadersTab.tsx  HistoryPanel.tsx  JsoncBodyEditor.tsx  KvTableWrap.tsx  LineNumberGutter.tsx  LineNumberedReadonly.tsx  PanelToggleIcons.tsx  ParamsTab.tsx  RequestEnvToolbar.tsx  ResizableSplitter.tsx  ResponsePanel.tsx  SaveRequestModal.tsx  ScriptManagerModal.tsx  ScriptTab.tsx  SettingsPanel.tsx  StreamResponseView.tsx  TabBar.tsx  TitleBar.tsx  TreeChevron.tsx  UrlBar.tsx  VerticalResizableSplitter.tsx
frontend/src/hooks/: useDropdownAnchorStyle.ts  useEnvVarCaretSuggestStyle.ts  useEnvVarCodeMirrorSuggest.ts  useEnvVarCodeMirrorSuggestStyle.ts  useEnvVarEntries.ts  useEnvVarSuggest.ts  useKvKeyColumnWidth.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: collections.rs  curl_export.rs  curl_parser.rs  environments.rs  folders.rs  histories.rs  history.rs  http_client.rs  main.rs  proxy_config.rs  script_daemon.rs  script_runner.rs  scripts.rs  session.rs  storage.rs
(+56 files in other folders)
