[package]
name = "APILite"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = true, features = ["json", "multipart", "system-proxy"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dirs-next = "2"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
